coockies and roles